[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/zh-cn.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pause/exitbutton.gd" type="Script" id=2]
[ext_resource path="res://Pause/pausebutton.gd" type="Script" id=3]
[ext_resource path="res://art/Imagino (Phil N Good Remix) (Intro).mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
margin_right = 1604.0
margin_bottom = 867.0
color = Color( 0.631373, 0.956863, 1, 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.349609
anchor_top = 0.381667
anchor_right = 0.681641
anchor_bottom = 0.483333
custom_fonts/font = SubResource( 1 )
text = "重新开始"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Button"]

[node name="Button2" type="Button" parent="."]
anchor_left = 0.34668
anchor_top = 0.556667
anchor_right = 0.683594
anchor_bottom = 0.658333
margin_bottom = -3.05176e-05
custom_fonts/font = SubResource( 1 )
text = "退出游戏"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Button2"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.09
autoplay = true

[connection signal="mouse_entered" from="Button" to="Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Button2" to="Button2" method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="Button2" method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_Button2_pressed"]
